--- a/yekola/courses/templates/courses/manage/module/content_list.html
+++ b/yekola/courses/templates/courses/manage/module/content_list.html
@@ -36,8 +36,8 @@
         {% for content in module.contents.all %}
           <div data-id="{{ content.id }}">
             {% with item=content.item %}
-              <p>{{ item }}</p>
-              <a href="#">Edit</a>
+              <p>{{ item }} ({{item|model_name}}) </p>
+              <a href="{% url "module_content_update" module.id item|model_name item.id %}">Edit</a>
               <form action="{% url "module_content_delete" content.id%}" method="post">
                 <input type="submit" value="Delete">
                 {% csrf_token %}
@@ -58,4 +58,43 @@
       </ul>
     </div>
 {% endwith %}
+{% endblock %}
+
+{% block domready %}
+  $('#modules').sortable({
+      stop: function(event, ui) {
+          modules_order = {};
+          $('#modules').children().each(function(){
+              // update the order field
+              $(this).find('.order').text($(this).index() + 1);
+              // associate the module's id with its order
+              modules_order[$(this).data('id')] = $(this).index();
+          });
+          $.ajax({
+              type: 'POST',
+              url: '{% url "module_order" %}',
+              contentType: 'application/json; charset=utf-8',
+              dataType: 'json',
+                 data: JSON.stringify(modules_order)
+             });
+      }
+  });
+
+  $('#module-contents').sortable({
+      stop: function(event, ui) {
+          contents_order = {};
+          $('#module-contents').children().each(function(){
+              // associate the module's id with its order
+              contents_order[$(this).data('id')] = $(this).index();
+          });
+
+          $.ajax({
+              type: 'POST',
+              url: '{% url "content_order" %}',
+              contentType: 'application/json; charset=utf-8',
+              dataType: 'json',
+              data: JSON.stringify(contents_order),
+          });
+      }
+  });
 {% endblock %}
